# backend-api

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini  requirements.txt
camera/: README.md  control.py  stream-lhs.sh  test_camera_control.py
router/: mcp.py  server.py
tests/: __init__.py  conftest.py  load_test.py  run_tests.py  test_camera_api.py  test_camera_control.py
visual/: main.py  requirements.txt  setup.py
